--- a/app/events/create-event.component.html
+++ b/app/events/create-event.component.html
@@ -1,4 +1,4 @@
-<!--<h1>New Event</h1>
+<h1>New Event</h1>
 <hr>
 <div class="col-md-6">
   <form #newEventForm="ngForm" (ngSubmit)="saveEvent(newEventForm.value)" autocomplete="off" novalidate>
@@ -53,4 +53,4 @@
     <button type="submit" class="btn btn-primary">Save</button>
     <button type="button" [disabled]="newEventForm.invalid" class="btn btn-default" (click)="cancel()">Cancel</button>
   </form>
-</div>-->
+</div>
