--- a/app/nav/navbar.component.html
+++ b/app/nav/navbar.component.html
@@ -38,7 +38,7 @@
         <div class="form-group">
           <input [(ngModel)]="searchTerm" name="searchTerm" type="text" class="form-control" placeholder="Search Sessions" >
         </div>
-        <button class="btn btn-default" modal-trigger>
+        <button class="btn btn-default" modal-trigger="searchResults">
           Search
         </button>
 
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-<simple-modal title="Matching Sessions"> 
+<simple-modal closeOnBodyClick="true" elementId="searchResults" title="Matching Sessions"> 
   <div class="list-group">
     <a class="list-group-item" 
       *ngFor="let session of foundSessions" 
