--- a/app/events/create-event.component.html
+++ b/app/events/create-event.component.html
@@ -1,16 +1,34 @@
 <h1>New Event</h1>
 <hr>
 <div class="col-md-6">
-  <form #newEventForm="ngForm" (ngSubmit)="saveEvent(newEventForm.value)" autocomplete="off" novalidate>
+  <form 
+    #newEventForm="ngForm" 
+    (ngSubmit)="saveEvent(newEventForm.value)" 
+    autocomplete="off" 
+    novalidate>
     <div class="form-group" [ngClass]="{'error': newEventForm.controls.name?.invalid && newEventForm.controls.name?.touched}">
       <label for="eventName">Event Name:</label>
       <em *ngIf="newEventForm.controls.name?.invalid && (newEventForm.controls.name?.touched)">Required</em>
-      <input (ngModel)="name" name="name" required id="name" type="text" class="form-control" placeholder="Name of your event..." />
+      <input 
+        type="text" 
+        name="name" 
+        (ngModel)="name" 
+        id="name" 
+        class="form-control" 
+        required 
+        placeholder="Name of your event..." />
     </div>
     <div class="form-group" [ngClass]="{'error': newEventForm.controls.date?.invalid && newEventForm.controls.date?.touched}">
       <label for="eventDate">Event Date:</label>
       <em *ngIf="newEventForm.controls.date?.invalid && (newEventForm.controls.date?.touched)">Required</em>
-      <input (ngModel)="date" name="date" required id="eventDate" type="text" class="form-control" placeholder="format (mm/dd/yyyy)..." />
+      <input 
+        type="text" 
+        name="date" 
+        (ngModel)="date" 
+        id="eventDate" 
+        class="form-control" 
+        required 
+        placeholder="format (mm/dd/yyyy)..." />
     </div>
     <div class="form-group" [ngClass]="{'error': newEventForm.controls.time?.invalid && newEventForm.controls.time?.touched}">
       <label for="eventTime">Event Time:</label>
@@ -23,10 +41,18 @@
       <input (ngModel)="price" name="price" required id="eventPrice" type="text" type="number" class="form-control" placeholder="event price..." />
     </div>
     
-    <div ngModelGroup="location">
+    <div ngModelGroup="location" validateLocation #locationGroup="ngModelGroup">
       <div class="form-group">
         <label for="address">Event Location:</label>
-        <input (ngModel)="address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..." />
+        <em *ngIf="locationGroup?.invalid && locationGroup?.touched">
+          You must enter a full location or online Url</em> 
+        <input 
+          (ngModel)="address" 
+          name="address" 
+          id="address" 
+          type="text" 
+          class="form-control" 
+          placeholder="Address of event..." />
       </div>
       <div class="row">
         <div class="col-md-6">
@@ -40,7 +66,14 @@
 
     <div class="form-group">
       <label for="onlineUrl">Online Url:</label>
-      <input (ngModel)="onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." />
+      <input 
+        (ngModel)="onlineUrl" 
+        name="onlineUrl" 
+        id="onlineUrl" 
+        type="text" 
+        class="form-control" 
+        (change)="locationGroup.control.controls.address.updateValueAndValidity()"
+        placeholder="Online Url..." />
     </div>
     <div class="form-group" [ngClass]="{'error': newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched}">
       <label for="imageUrl">Image:</label>
